correction wrap ol

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -238,6 +238,7 @@ body {
   margin: 0 auto;
   text-align: center;
   max-width: 768px;
+  height: 100vh;
 }
 
 .search-restaurants, .restaurants {
@@ -259,7 +260,7 @@ body {
   margin-right: auto;
   width: 20em;
 }
-.wrapp__wrapp__process {
+.wrapp__process {
   width: 100%;
 }
 
