--- a/sass/layouts/_container.scss
+++ b/sass/layouts/_container.scss
@@ -2,7 +2,7 @@ body
 { margin: 0 auto;
    text-align: center;
    max-width: 768px;
-   
+   height: 100vh;
 }
 
 .search-restaurants, .restaurants
@@ -24,12 +24,13 @@ body
    align-items: flex-start;
     margin-left: auto;
     margin-right: auto;
-    width: 20em;
-    &__wrapp__process {
-       width: 100%;
-    }   
+    width: 20em;   
+    &__process {
+      width: 100%;
+   }
   
 }
+ 
 
 .restaurant-name
 {
